# model-card

./: README.md  WHITEPAPER.md  pyproject.toml
examples/: basic_usage.py
nanda_model_card/: __init__.py  model_card.py
sm_model_card/: __init__.py  model_card.py
tests/: test_model_card.py
